# rainmaker-rs

./: .gitignore  Cargo.toml  README.md  cert.csr  claim.txt  hostapd.conf  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yaml
components/: Cargo.toml  build.rs
components/proto/: session.proto
components/src/: ble.rs  error.rs  http.rs  http_client.rs  http_server.rs  lib.rs  local_ctrl.rs  mqtt.rs  ota.rs  persistent_storage.rs  protocomm.rs  utils.rs  wifi.rs  wifi_prov.rs
components/src/ble/: base.rs  ble_esp.rs  ble_linux.rs
components/src/http/: base.rs  http_esp.rs  http_linux.rs
components/src/http_client/: base.rs  esp.rs  linux.rs
components/src/http_server/: base.rs  http_esp.rs  http_linux.rs
components/src/mqtt/: base.rs  esp.rs  linux.rs
components/src/ota/: base.rs  esp.rs  linux.rs
components/src/persistent_storage/: base.rs  persistent_esp.rs  persistent_linux.rs
components/src/proto/: constants.rs  mod.rs
components/src/proto/session/: mod.rs  sec0.rs  sec1.rs  sec2.rs  session.rs
components/src/proto/wifi_prov/: mod.rs  wifi_config.rs  wifi_constants.rs  wifi_scan.rs
components/src/protocomm/: mod.rs  proto.rs
components/src/protocomm/security/: mod.rs  sec0.rs  sec1.rs
components/src/protocomm/transports/: ble.rs  gatt.rs  httpd.rs  mod.rs
components/src/wifi/: base.rs  wifi_esp.rs  wifi_linux.rs
components/src/wifi_prov/: base.rs  ble.rs  softap.rs
core_components/: Cargo.toml
core_components/src/: lib.rs
docs/: PREREQUISITES.md
examples/: Cargo.toml  README.md  build.rs  espflash.toml  led.rs  partitions.csv  switch.rs
examples/src/: lib.rs  ws2812.rs
led_switch/: Cargo.toml  README.md  build.rs  partitions.csv  sdkconfig.defaults
led_switch/.cargo/: config.toml
led_switch/src/: device_led.rs  device_light.rs  devices.rs  main.rs  main.txt  t2.json  temp.json  text.txt
rainmaker/: Cargo.toml  build.rs  cio.md  sdkconfig.defaults
rainmaker/src/: claiming.rs  constants.rs  device.rs  error.rs  factory.rs  lib.rs  local_ctrl.rs  local_ctrl_service.rs  mqtt.rs  node.rs  param.rs  rmaker_mqtt.rs  scenes.rs  utils.rs  wifi_prov.rs
rainmaker/src/proto/: esp_rmaker_user_mapping.rs  mod.rs
