[workspace]
members = ["components", "rainmaker", "led_switch"]
# exclude = ["led_switch"]
resolver = "2"

[profile.dev]
opt-level = "z"
debug = true
# lto = true

[profile.release]
opt-level = "z"
strip = true
panic = "abort"

# [profile.release]
# opt-level = "z"
# debug = true
# lto = true
# panic = "abort"
# strip = true
# codegen-units = 1
