[package]
name = "components"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = { version = "1.0.79", default-features = false }
ctr = "0.9.2"
ed25519-compact = { version = "2.1.1", default-features = false, features = ["random", "x25519"] }
log = { version = "0.4.20", default-features = false }
pickledb = "0.5.1"
prost = "0.12.3"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
sha2 = "0.10.8"

[target."cfg(target_os=\"linux\")".dependencies]
tiny_http = { version = "0.12.0", default-features = false }
rumqttc = { version = "0.23.0" }

[target."cfg(target_os=\"espidf\")".dependencies]
embedded-svc = { version = "0.26.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false , features=["alloc"]}

[build-dependencies]
prost-build = "0.12.3"

