[package]
name = "components"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = { version = "1.0.79", default-features = false }
ctr = "0.9.2"
ed25519-compact = { version = "2.1.1", default-features = false, features = ["random", "x25519"] }
log = { version = "0.4.20", default-features = false }
quick-protobuf = "0.8.1"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
sha2 = "0.10.8"
uuid = "1.10.0"

[target."cfg(target_os=\"linux\")".dependencies]
pickledb = "0.5.1"
bluer = { version = "0.17.3", features = ["bluetoothd", "id"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tiny_http = { version = "0.12.0", default-features = false }
rumqttc = { version = "0.23.0" }

[target."cfg(target_os=\"espidf\")".dependencies]
heapless = "0.8.0"
embedded-svc = { version = "0.28.0", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false, features = ["alloc"] }
esp32-nimble = "0.8.0"
