[package]
name = "examples"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
rainmaker = { path = "../rainmaker" }
components = { path = "../components" }
serde_json = "1.0.128"
log = "0.4.22"
anyhow = "1.0.93"

[target.'cfg(target_os="linux")'.dependencies]
simple_logger = "4.3.3"

[target.'cfg(target_os="espidf")'.dependencies]
esp-idf-svc = { version = "0.49.1", default-features = false, features = ["binstart"] }
rgb = "0.8.50"

[[bin]]
name = "switch"
path = "switch.rs"

[[bin]]
name = "led"
path = "led.rs"

[build-dependencies]
embuild = { version = "0.31.4", default-features = false, features = [
    "espidf",
] }
