[package]
name = "led_switch"
version = "0.1.0"
edition = "2021"
    

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embassy", "esp-idf-svc/native"]

embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
rainmaker = { path = "../rainmaker" }
components = { path = "../components" }
# rumqttc = "0.23.0"
# esp-idf-svc ={ version = "0.47.3", default-features = false}
log = "0.4.20"

[target.'cfg(target_os="espidf")'.dependencies]
esp-idf-svc = { version = "0.47.3", default-features = false, features = ["binstart"] }

[build-dependencies]
embuild = {version = "0.31.4", default-features = false, features = ["espidf"]}
