[package]
name = "led_switch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"    

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["esp-idf-svc/native"]

# embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
rainmaker = { path = "../rainmaker" }
components = { path = "../components" }
log = "0.4.20"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[target.'cfg(target_os="espidf")'.dependencies]
esp-idf-svc = { version = "0.47.3", default-features = false, features = ["binstart"] }
ws2812-esp32-rmt-driver = "0.7.1"
smart-leds = "0.4.0"
smart-leds-trait = "0.2.1"
mdns = { path = "../../../projects/mdns"}


[build-dependencies]
embuild = {version = "0.31.4", default-features = false, features = ["espidf"]}

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
debug = true
lto = true
panic = "abort"
strip = true
codegen-units = 1