[package]
name = "rainmaker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# below feature is used for testing purposes, wifi connection isn't implemented on linux
# it can be used for user mapping in case you don't have an esp
# however you'll explicitly need to create a accesspoint with your pc having ip address 192.168.4.1 and use security level 0 with it
linux_wifi = []

[dependencies]
anyhow = { version = "1.0.79", default-features = false }
components = { path = "../components" }
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
prost = "0.12.3"

[target.'cfg(target_os="linux")'.dependencies]
simple_logger = "4.3.3"

[target.'cfg(target_os="espidf")'.dependencies]
esp-idf-svc = { version = "0.47.3", default-features = false, features = ["alloc"] }

[build-dependencies]
prost-build = "0.12.3"
