[package]
name = "rainmaker"
authors = ["Shreyash Bubane <bubaneshreyash3@gmail.com>", "Chinmay Dixit <chinmaydixit2303@gmail.com"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rust Implementation of ESP RainMaker Agent."
documentation = "https://docs.rs/rainmaker"
repository = "https://github.com/rainmaker-rs/rainmaker"
rust-version = "1.80"
readme = "cio.md"
categories = ["embedded"]
keywords = ["iot", "linux", "esp", "home automation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", default-features = false }
rainmaker-components = { version = "0.1.0" }
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
quick-protobuf = "0.8.1"

[target.'cfg(target_os="linux")'.dependencies]
simple_logger = "4.3.3"

[target.'cfg(target_os="espidf")'.dependencies]
esp-idf-svc = { version = "0.49.1", default-features = false, features = ["alloc"] }
